solution for outbot pattern errors